--- a/applications/WebMod/views/default/profile.html
+++ b/applications/WebMod/views/default/profile.html
@@ -23,7 +23,7 @@
 {{end}}
 </head>
 
-<body style="background: linear-gradient(#212229, #000000);">
+<body style="background: linear-gradient(#212229, #000000); padding: 0;">
 <div>
    <div style="padding-left:20px; padding-top:20px;">
       <div style="width:30%; height:450px; float:left; background:#111; border-radius:5px;">
