--- a/applications/WebMod/static/css/web2py-bootstrap3.css
+++ b/applications/WebMod/static/css/web2py-bootstrap3.css
@@ -105,7 +105,7 @@ select.autocomplete {
     margin: 20px;
 }
 .background {
-    background: url(../images/test_img.png) no-repeat center center;
+    background: url(../images/webmodbanner.png) no-repeat center center;
 }
 body {
     padding-top: 50px;
